--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "diskdb": "^0.1.17",
     "rxjs": "^5.1.0",
+    "source": "0.0.3",
+    "sqlite3": "^3.1.13",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
